--- a/keuzevak-brandwebsite/package.json
+++ b/keuzevak-brandwebsite/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2"
+    "@ant-design/icons": "^5.3.6",
+    "antd": "^5.16.4",
+    "next": "^14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
