--- a/keuzevak-brandwebsite/package.json
+++ b/keuzevak-brandwebsite/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.0.2",
     "@ant-design/icons": "^5.3.6",
     "antd": "^5.16.4",
     "next": "^14.2.3",
