--- a/keuzevak-brandwebsite/package.json
+++ b/keuzevak-brandwebsite/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.16.4",
     "next": "^14.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "simple-icons": "^11.14.0"
   },
   "devDependencies": {
     "postcss": "^8",
