--- a/portfolio_stephanos/package.json
+++ b/portfolio_stephanos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keuzevak-brandwebsite",
+  "name": "portfolio_stephanos",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/colors": "^7.0.2",
-    "@ant-design/icons": "^5.3.6",
-    "antd": "^5.16.4",
-    "next": "^14.2.3",
-    "react": "^18.2.0",
+    "@ant-design/icons": "^5.3.7",
+    "next": "14.2.3",
+    "react": "^18",
     "react-dom": "^18",
-    "simple-icons": "^11.14.0"
+    "simple-icons": "^11.15.0"
   },
   "devDependencies": {
     "postcss": "^8",
